fixed background image on mobile

--- a/css/screen.css
+++ b/css/screen.css
@@ -500,13 +500,14 @@ li {
 }
 
 .c-top__background {
-  background: linear-gradient(rgba(79, 172, 212, 0.5),
-      rgba(79, 172, 212, 0.5));
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 0;
   height: 75%;
+  width: 100%;
+  background-image: url('../assets/images/Background.jpg');
+  background-size: cover;
+  background-position: center center;
 }
 
 .c-top__overlay {
